query-builder/src/statements/snapshots/surreal_query_builder__statements__ifelse__tests__if_statement1-2.snap
---
source: query-builder/src/statements/ifelse.rs
expression: if_statement1.to_raw().build()
---
IF age >= 18 <= 120 
	{ (SELECT * FROM user) };
