query-builder/src/statements/snapshots/surreal_query_builder__statements__ifelse__tests__if_statement2-2.snap
---
source: query-builder/src/statements/ifelse.rs
expression: if_statement2.to_raw().build()
---
IF age >= 18 <= 120 
	{ SELECT * FROM user WHERE age > 34; }
ELSE
	{ SELECT * FROM book; };
