query-builder/src/statements/snapshots/surreal_query_builder__statements__ifelse__tests__if_statement2.snap
---
source: query-builder/src/statements/ifelse.rs
expression: if_statement2.fine_tune_params()
---
IF (age >= $_param_00000001) AND (age <= $_param_00000002) 
	{ $_param_00000003 }
ELSE
	{ $_param_00000004 };
