query-builder/src/statements/snapshots/surreal_query_builder__statements__ifelse__tests__if_statement3.snap
---
source: query-builder/src/statements/ifelse.rs
expression: if_statement.fine_tune_params()
---
IF age >= $_param_00000001 <= $_param_00000002 
	{ SELECT * FROM user; }
ELSE IF name ~ $_param_00000003 
	{ SELECT * FROM book; };
