query-builder/src/statements/snapshots/surreal_query_builder__statements__ifelse__tests__if_statement4.snap
---
source: query-builder/src/statements/ifelse.rs
expression: if_statement4.fine_tune_params()
---
IF age >= $_param_00000001 <= $_param_00000002 
	{ $_param_00000003 }
ELSE IF name ~ $_param_00000004 
	{ $_param_00000005 }
ELSE
	{ $_param_00000006 };
